<resources>
    <string name="app_name">Nabalny</string>
    <string name="action_signout">Sign Out</string>
    <string name="vote_text">Vote</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="abstain_string">Abstain</string>

    <string name="unsuccessful_auth_string">Authentication Problem</string>
    <string name="you_vote">do you vote against corruption?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nabalny_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjIhQ8vDMCxjR/phCRjktuoL7zIHsvmv7CaQ49rJvXgQuKd10qqLKRK3vtMqVIYI/bauTxtJCkUy23GUZLEviW4ql8VexzNZmuPkSuFqjU9dqsBYH+Y4QZP9jhR6qyi6S8rfueXisn96kdnvwDSD9+k+9f+1VlrsKQPeERwt3po1ehVAadTYKt/7cUmW3vLGs4igCOvVxcY01QDBtFuee/IlpbJy28TyVVCIgw1QpuKwHBJfSazHoMbOPNDHCrc9dmcdmcxhAHrELdXS5r5fs0JuXNzjcalRqy21S1Qz/RMh4R2H3opVqwttamemOaxjUUcHCz1v3AWiJx5ZqEBsc+QIDAQAB</string>

    <string name="no_vote_alert">Before viewing results you should vote at least one time</string>
    <string name="vote_accepted">Your vote has been accepted</string>
    <string name="buy_1_item_text">Buy 1 vote</string>
    <string name="buy_10_item_text">Buy 10 votes</string>
    <string name="buy_100_item_text">Buy 100 votes</string>
    <string name="select_n_votes_text">Votes to buy</string>

</resources>
