<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:id="@+id/buyDialog">


    <RadioGroup
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buyRbtnLayout" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
        <RadioButton
                android:text="@string/buy_1_item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn1Item" android:checked="true"/>
        <RadioButton
                android:text="@string/buy_10_item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn10Items"/>
        <RadioButton
                android:text="@string/buy_100_item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn100Items"/>
    </RadioGroup>

    <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buyCancelBtn"
            android:layout_marginTop="22dp"
            android:layout_marginStart="28dp"
            android:layout_below="@+id/buyRbtnLayout" android:layout_alignParentStart="true"/>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buyOkBtn"
            android:layout_alignBaseline="@+id/buyCancelBtn" android:layout_alignBottom="@+id/buyCancelBtn"
            android:layout_alignParentEnd="true" android:layout_marginEnd="27dp"/>
</RelativeLayout>